--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li class="target"><a  href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+            <li><a href="#" target="_blank">link</a></li>
+        </ul>
+    </nav>    
 </body>
 </html>
