--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
             <li><a href="#" target="_blank">link</a></li>
         </ul>
     </nav>    
+
+    <h1>lalala</h1>
+    <h2>lalala</h2>
+    <h3>lalala</h3>
+    <h4>lalala</h4>
+    <h5>lalala</h5>
+    <h6>lalala</h6>
+
 </body>
 </html>
