--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
-    <h1>Lalala</h1>
+
+    <main>
+        <section>
+            <li><a href="#">Hello!</a></li>
+        </section>
+    </main>
+    
 </body>
 </html>
